syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.videonetics.data_models.status.protos";
option java_outer_classname = "StatusProtos";

package resource;


message ThreadStatus {
  uint64 id = 1;
  uint64 channel_id = 2;
  uint64 value = 3;
  uint64 last_value = 4;
  uint64 last_updated_in_ms = 5;
}

message ProcessStatus {
  uint64 id = 1;
  uint64 channel_id = 2;
  repeated ThreadStatus thread_status = 3;
}

message MachineStatus {
  uint64 id = 1;
  uint64 channel_id = 2;
  repeated ProcessStatus process_status = 3;
}

message ClusterStatus {
  uint64 id = 1;
  uint64 channel_id = 2;
  repeated MachineStatus machine_status = 3;
}