syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.videonetics.data_models.statusservice.protos";
option java_outer_classname = "StatusServiceProtos";

package resource;
import "interfaces/status.proto";

service StatusService
{
  rpc SetStatus(SetStatusRequest) returns (SetStatusResponse) {}
}

message SetStatusRequest
{
  ClusterStatus cluster_status = 1;
  int64 time_diff = 2;
  int64 timestamp_sec = 3;
}

message SetStatusResponse { int64 error_code = 1; }